# arduino-mock

./: .gitmodules  CMakeLists.txt  CMakeLists.txt.gtest  build.sh
include/arduino-mock/: Arduino.h
test/: CMakeLists.txt  test_all.cc
